--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -19,7 +19,7 @@
 }
 
 .contact-title {
-  font-size: 41px;
+  font-size: 30px;
   font-weight: 700;
   color: #333;
   margin-bottom: 40px;
@@ -28,12 +28,14 @@
 
 .contact-title span {
   font-weight:700;
-  font-size: 41px;
+  font-size: 30px;
   margin-bottom: 40px;
+  top: 30px;
 }
 
 .contact-form {
   width: 100%;
+  top: 30px;
 }
 
 .form-row {
